fix(cta): fixed wrapping and pointer

--- a/elements/rh-cta/rh-cta.css
+++ b/elements/rh-cta/rh-cta.css
@@ -9,7 +9,7 @@
 
 ::slotted(*) {
   vertical-align: middle;
-  white-space: normal;
+  white-space: break-spaces;
   display: inline;
   color: inherit !important;
   font-family: inherit !important;
@@ -18,6 +18,7 @@
   line-height: inherit !important;
   text-decoration: var(--rh-cta-text-decoration);
   position: relative;
+  cursor: pointer;
   z-index: 2;
 }
 
